--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,34 @@
-/*# sourceMappingURL=main.css.map */
+body {
+  font-family: "Roboto", "Raleway", sans-serif;
+  color: #212121;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+input:focus,
+textarea:focus {
+  outline: none;
+}
+
+ul,
+ol {
+  padding: 0;
+  list-style: none;
+}
+
+img {
+  display: block;
+}
+
+.container {
+  width: 1200px;
+  margin: 0px auto;
+}
+
+header,
+section,
+footer {
+  font-family: "Roboto", " Raleway", sans-serif;
+}/*# sourceMappingURL=main.css.map */
