--- a/css/styles.css
+++ b/css/styles.css
@@ -552,7 +552,7 @@ footer {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
-.close-button {
+.modal__close-button {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -563,30 +563,27 @@ footer {
   border-radius: 50%;
   cursor: pointer;
 }
-.is-hidden {
+.backdrop--hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
 }
-.modal-form {
+.form {
   padding: 40px;
 }
-.statute-checkbox {
-  color: #757575;
-}
-.modal-form-input-title {
+.form__input-title {
   font-size: 12px;
   letter-spacing: 0.01em;
   color: #757575;
   margin-top: 10px;
   margin-bottom: 4px;
 }
-.modal-form-title {
+.form__title {
   font-size: 20px;
   line-height: 1.15;
   text-align: center;
 }
-.modal-form-button {
+.form__button {
   font-family: Roboto;
   color: #ffffff;
   background-color: #2196f3;
@@ -601,14 +598,14 @@ footer {
   border-radius: 4px;
   cursor: pointer;
 }
-.modal-input {
+.form__input {
   width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 42px;
 }
-.modal-textarea {
+.form__textarea {
   width: 100%;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -616,25 +613,25 @@ footer {
   resize: none;
   padding: 12px 16px;
 }
-.modal-textarea::placeholder {
+.form__textarea::placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
-.modal-form-icon {
+.form__icon {
   position: absolute;
   left: 15px;
   bottom: 14px;
 }
-.modal-input-box {
+.form__input-box {
   position: relative;
 }
-.modal-form-policy-text {
+.form__policy-text {
   display: flex;
   align-items: center;
   color: #757575;
   height: 24px;
   margin: 20px auto 30px auto;
 }
-.modal-form-policy-text::before {
+.form__policy-text::before {
   display: inline-block;
   content: "";
   width: 16px;
@@ -643,12 +640,12 @@ footer {
   border-radius: 2px;
   margin-right: 8px;
 }
-.modal-form-policy:checked + .modal-form-policy-text::before {
+.form__policy:checked + .form__policy-text::before {
   border: none;
   background-image: url(../images/icon\ check.svg);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.visually-hidden {
+.form__policy--hidden {
   position: absolute !important;
   clip: rect(1px 1px 1px 1px);
   clip: rect(1px, 1px, 1px, 1px);
@@ -658,17 +655,17 @@ footer {
   width: 1px !important;
   overflow: hidden;
 }
-.modal-submit {
+.form__submit {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.modal-input:focus-within,
-.modal-textarea:focus-within {
+.form__input:focus-within,
+.form__textarea:focus-within {
   border-color: #2196f3;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-input:focus-within + .modal-form-icon {
+.form__input:focus-within + .form__icon {
   fill: #2196f3;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
