--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,2 +1,15 @@
+@import "./utils/visually-hidden";
+
 @import "./base/common";
 @import "./base/container";
+
+@import "./components/modal";
+@import "./components/backdrop";
+
+@import "./layout/header";
+@import "./layout/advert";
+@import "./layout/whatwedo";
+@import "./layout/team";
+@import "./layout/footer";
+
+@import "./layout/portfolio"
