--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,11 +5,23 @@
 
 @import "./components/modal";
 @import "./components/backdrop";
+@import "./components/logo";
+@import "./components/newsletter";
+@import "./components/contact";
+@import "./components/navigation";
+@import "./components/form";
+@import "./components/main-title";
+@import "./components/johns";
+@import "./components/social-links";
+@import "./components/title";
+@import "./components/smaller-title";
 
 @import "./layout/header";
 @import "./layout/advert";
 @import "./layout/whatwedo";
 @import "./layout/team";
 @import "./layout/footer";
+@import "./layout/our-advantages";
+@import "./layout/clients";
 
-@import "./layout/portfolio"
+@import "./layout/portfolio";
