--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,6 @@ footer {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
-
 .modal__close-button {
   position: absolute;
   top: 8px;
@@ -68,10 +67,107 @@ footer {
   cursor: pointer;
 }
 
+.backdrop {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop--hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.logo {
+  font-family: "Raleway";
+  font-weight: 700;
+  text-decoration: none;
+  font-size: 26px;
+  color: #212121;
+  margin-right: 93px;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
+.logo__color1 {
+  color: #2196f3;
+}
+
+.newsletter {
+  margin-left: 78px;
+}
+.newsletter__input {
+  background-color: rgba(0, 0, 0, 0);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  width: 358px;
+  height: 50px;
+  padding-left: 16px;
+  color: rgba(255, 255, 255, 0.6);
+}
+.newsletter__input::-moz-placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+.newsletter__input:-ms-input-placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+.newsletter__input::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+.newsletter__button {
+  font-family: Roboto;
+  color: #ffffff;
+  background-color: #2196f3;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  text-align: center;
+  width: 200px;
+  height: 50px;
+  margin: 0 auto;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  cursor: pointer;
+}
+.newsletter__button-icon {
+  fill: #ffffff;
+  margin-left: 24px;
+}
+.newsletter__button-inside {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact {
+  display: block;
+}
+.contact__link {
+  color: #757575;
+  text-decoration: none;
+  margin: auto 25px;
+}
+.contact__icon {
+  margin: auto 10px;
+}
+
+.navigation {
+  display: flex;
+  list-style: none;
+  align-items: center;
+}
+.navigation__item {
+  margin: auto 23px;
+}
+
 .form {
   padding: 40px;
 }
-
 .form__input-title {
   font-size: 12px;
   letter-spacing: 0.01em;
@@ -79,13 +175,11 @@ footer {
   margin-top: 10px;
   margin-bottom: 4px;
 }
-
 .form__title {
   font-size: 20px;
   line-height: 1.15;
   text-align: center;
 }
-
 .form__button {
   font-family: Roboto;
   color: #ffffff;
@@ -101,7 +195,6 @@ footer {
   border-radius: 4px;
   cursor: pointer;
 }
-
 .form__input {
   width: 100%;
   height: 40px;
@@ -109,7 +202,6 @@ footer {
   border-radius: 4px;
   padding-left: 42px;
 }
-
 .form__textarea {
   width: 100%;
   height: 120px;
@@ -118,29 +210,23 @@ footer {
   resize: none;
   padding: 12px 16px;
 }
-
 .form__textarea::-moz-placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
-
 .form__textarea:-ms-input-placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
-
 .form__textarea::placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
-
 .form__icon {
   position: absolute;
   left: 15px;
   bottom: 14px;
 }
-
 .form__input-box {
   position: relative;
 }
-
 .form__policy-text {
   display: flex;
   align-items: center;
@@ -148,7 +234,6 @@ footer {
   height: 24px;
   margin: 20px auto 30px auto;
 }
-
 .form__policy-text::before {
   display: inline-block;
   content: "";
@@ -158,141 +243,25 @@ footer {
   border-radius: 2px;
   margin-right: 8px;
 }
-
 .form__policy:checked + .form__policy-text::before {
   border: none;
   background-image: url(../images/icon\ check.svg);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .form__submit {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
-.form__input:focus-within,
-.form__textarea:focus-within {
+.form__input:focus-within, .form__textarea:focus-within {
   border-color: #2196f3;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .form__input:focus-within + .form__icon {
   fill: #2196f3;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop {
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
-  transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.backdrop--hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
-
-/* HEADER */
-.header {
-  height: 80px;
-  border-bottom: 1px solid #ececec;
-  font-weight: 500;
-  font-size: 14px;
-  display: flex;
-  list-style: none;
-}
-
-.header__contact {
-  margin-left: auto;
-}
-
-.navigation__item {
-  margin: auto 23px;
-}
-
-.contact__link {
-  margin: auto 25px;
-}
-
-.header__container {
-  display: flex;
-  align-items: center;
-}
-
-.header__navigation,
-.header__contact {
-  display: flex;
-  justify-content: center;
-}
-
-.logo {
-  font-family: "Raleway";
-  font-weight: 700;
-  text-decoration: none;
-  font-size: 26px;
-  color: #212121;
-  margin-right: 93px;
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-}
-
-.header__link {
-  color: #212121;
-  text-decoration: none;
-  fill: currentColor;
-}
-
-.logo__color1 {
-  color: #2196f3;
-}
-
-.header__link:hover,
-.header__link:focus {
-  color: #2196f3;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.contact__link {
-  color: #757575;
-  text-decoration: none;
-}
-
-.contact__icon {
-  margin: auto 10px;
-}
-
-.navigation {
-  display: flex;
-  list-style: none;
-  align-items: center;
-}
-
-.contact {
-  display: block;
-}
-
-.header__link--active {
-  position: relative;
-}
-
-.header__link--active::after {
-  content: "";
-  display: block;
-  border-top: 4px solid #2196f3;
-  border-radius: 2px;
-  position: absolute;
-  width: 100%;
-  bottom: -32.5px;
-}
-
-/* ADVERT */
 .main-title {
   font-family: Roboto;
   color: #ffffff;
@@ -307,6 +276,124 @@ footer {
   padding-bottom: 30px;
 }
 
+.johns {
+  display: flex;
+  justify-content: space-between;
+}
+.johns__member {
+  color: #757575;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  width: 270px;
+  height: auto;
+  margin: 0;
+  background-color: #ffffff;
+}
+.johns__figcaption {
+  margin: 30px auto;
+}
+.johns__standing {
+  margin: 10px auto;
+}
+.johns__picture {
+  margin: 0;
+  padding: 0;
+  display: inline;
+  justify-content: flex-start;
+}
+.johns__figure {
+  -webkit-margin-before: 0;
+          margin-block-start: 0;
+  -webkit-margin-after: 0;
+          margin-block-end: 0;
+  -webkit-margin-start: 0;
+          margin-inline-start: 0;
+  -webkit-margin-end: 0;
+          margin-inline-end: 0;
+}
+.johns__name {
+  color: #212121;
+  font-weight: 500;
+}
+
+.social-links {
+  margin: 0px auto 0px auto;
+  width: 206px;
+  height: 44px;
+  display: flex;
+  justify-content: space-between;
+}
+.social-links__icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: #ffffff;
+  fill: #afb1b8;
+}
+.social-links__icon:hover, .social-links__icon:focus {
+  background-color: #2196f3;
+  fill: #ffffff;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+}
+
+.smaller-title {
+  font-family: Roboto;
+  font-weight: 700;
+}
+
+.header {
+  height: 80px;
+  border-bottom: 1px solid #ececec;
+  font-weight: 500;
+  font-size: 14px;
+  display: flex;
+  list-style: none;
+}
+.header__contact {
+  margin-left: auto;
+}
+.header__container {
+  display: flex;
+  align-items: center;
+}
+.header__navigation, .header__contact {
+  display: flex;
+  justify-content: center;
+}
+.header__link {
+  color: #212121;
+  text-decoration: none;
+  fill: currentColor;
+}
+.header__link:hover, .header__link:focus {
+  color: #2196f3;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header__link--active {
+  position: relative;
+}
+.header__link--active::after {
+  content: "";
+  display: block;
+  border-top: 4px solid #2196f3;
+  border-radius: 2px;
+  position: absolute;
+  width: 100%;
+  bottom: -32.5px;
+}
+
 .advert {
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background1.jpg);
   background-repeat: no-repeat;
@@ -317,13 +404,11 @@ footer {
   display: block;
   justify-content: center;
 }
-
 .advert__button {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
 .advert__button {
   border-radius: 4px;
   padding: 10px auto;
@@ -339,63 +424,21 @@ footer {
   height: 50px;
   margin: 0 auto;
 }
-
-.advert__button:hover,
-.advert__button:focus {
+.advert__button:hover, .advert__button:focus {
   cursor: pointer;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* OURS ADVANTAGES */
-.feature {
-  color: #757575;
-}
-
-.feature__icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 120px;
-  margin-bottom: 30px;
-  border-radius: 4px;
-  background-color: #f5f4fa;
-}
-
-.feature__title {
-  font-weight: 700;
-  color: #212121;
-  margin-bottom: 10px;
-}
-
-.list1 {
-  display: flex;
-  justify-content: space-between;
-  margin: 94px auto;
-}
-
-.feature:not(:last-child) {
-  margin-right: 30px;
-}
-
 /* WHAT WE DO */
-.title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-}
-
 .what-we-do__list {
   display: flex;
   align-content: space-between;
 }
-
 .what-we-do__element {
   position: relative;
   padding-right: 15px;
   padding-left: 15px;
 }
-
 .what-we-do__label {
   position: absolute;
   bottom: 0;
@@ -412,101 +455,103 @@ footer {
   justify-content: center;
 }
 
-/* TEAM */
+.team {
+  background-color: #f5f4fa;
+}
 .team__container {
   margin-top: 94px;
   padding: 94px 0;
 }
-
 .team__title {
   margin-bottom: 50px;
 }
 
-.johns__member {
+.footer {
+  background-color: #2f303a;
+  color: #ffffff;
+}
+.footer__logo {
+  color: inherit;
+  margin-bottom: 20px;
+}
+.footer__container {
+  padding: 60px 0;
+  display: flex;
+}
+.footer__contact {
+  color: rgba(255, 255, 255, 0.6);
+}
+.footer__link {
   color: #757575;
-  font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  width: 270px;
-  height: auto;
-  margin: 0;
-  background-color: #ffffff;
+  text-decoration: none;
+  display: block;
+  font-style: normal;
+  margin: 9px auto;
 }
-
-.johns {
-  display: flex;
-  justify-content: space-between;
+.footer__link:hover, .footer__link:focus {
+  color: #2196f3;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.johns__figcaption {
-  margin: 30px auto;
+.footer__address {
+  font-style: normal;
 }
-
-.johns__standing {
-  margin: 10px auto;
+.footer__social {
+  margin-left: 70px;
 }
-
-.johns__picture {
-  margin: 0;
-  padding: 0;
-  display: inline;
-  justify-content: flex-start;
-}
-
-.johns__figure {
-  -webkit-margin-before: 0;
-          margin-block-start: 0;
-  -webkit-margin-after: 0;
-          margin-block-end: 0;
-  -webkit-margin-start: 0;
-          margin-inline-start: 0;
-  -webkit-margin-end: 0;
-          margin-inline-end: 0;
-}
-
-.team {
-  background-color: #f5f4fa;
-}
-
-.johns__name {
-  color: #212121;
-  font-weight: 500;
-}
-
-.social-links {
-  margin: 0px auto 0px auto;
+.footer__social-links {
   width: 206px;
-  height: 44px;
+  height: 80px;
   display: flex;
   justify-content: space-between;
 }
-
-.social-links__icon {
+.footer__social-icon {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  background-color: #ffffff;
-  fill: #afb1b8;
+  background-color: rgba(255, 255, 255, 0.1);
+  fill: #ffffff;
 }
-
-.social-links__icon:hover,
-.social-links__icon:focus {
+.footer__social-icon:hover, .footer__social-icon:focus {
   background-color: #2196f3;
   fill: #ffffff;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* CLIENTS */
+.advantages__list {
+  display: flex;
+  justify-content: space-between;
+  margin: 94px auto;
+}
+
+.feature {
+  color: #757575;
+}
+.feature__icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 120px;
+  margin-bottom: 30px;
+  border-radius: 4px;
+  background-color: #f5f4fa;
+}
+.feature__title {
+  font-weight: 700;
+  color: #212121;
+  margin-bottom: 10px;
+}
+.feature:not(:last-child) {
+  margin-right: 30px;
+}
+
 .clients__list {
   display: flex;
   justify-content: space-between;
   margin: 0 15px 94px 15px;
 }
-
 .clients__client {
   display: flex;
   justify-content: center;
@@ -519,144 +564,16 @@ footer {
   border-color: #afb1b8;
   fill: #afb1b8;
 }
-
-.clients__logo {
-  display: flex;
-  align-content: center;
-  width: 106px;
-}
-
 .clients__client:hover {
   fill: #2196f3;
   border-color: #2196f3;
   cursor: pointer;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-/* FOOTER */
-.footer {
-  background-color: #2f303a;
-  color: #ffffff;
-}
-
-.footer__logo {
-  color: inherit;
-  margin-bottom: 20px;
-}
-
-.footer__container {
-  padding: 60px 0;
+.clients__logo {
   display: flex;
-}
-
-.footer__contact {
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.smaller-title {
-  font-family: Roboto;
-  font-weight: 700;
-}
-
-.footer__link:hover,
-.footer__link:focus {
-  color: #2196f3;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer__address {
-  font-style: normal;
-}
-
-.footer__link {
-  color: #757575;
-  text-decoration: none;
-  display: block;
-  font-style: normal;
-  margin: 9px auto;
-}
-
-.social-footer {
-  margin-left: 70px;
-}
-
-.social-footer__links {
-  width: 206px;
-  height: 80px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.social-footer__icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.1);
-  fill: #ffffff;
-}
-
-.social-footer__icon:hover,
-.social-footer__icon:focus {
-  background-color: #2196f3;
-  fill: #ffffff;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.newsletter {
-  margin-left: 78px;
-}
-
-.newsletter__input {
-  background-color: rgba(0, 0, 0, 0);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  width: 358px;
-  height: 50px;
-  padding-left: 16px;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.newsletter__input::-moz-placeholder {
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.newsletter__input:-ms-input-placeholder {
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.newsletter__input::placeholder {
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.newsletter__button {
-  font-family: Roboto;
-  color: #ffffff;
-  background-color: #2196f3;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.875;
-  text-align: center;
-  width: 200px;
-  height: 50px;
-  margin: 0 auto;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.newsletter__button-icon {
-  fill: #ffffff;
-  margin-left: 24px;
-}
-
-.newsletter__button-inside {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  align-content: center;
+  width: 106px;
 }
 
 /* PORTFOLIO */
