--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -6,9 +6,9 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
     transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.backdrop--hidden {
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
+    &--hidden {
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+    }
 }
