--- a/sass/layout/_advert.scss
+++ b/sass/layout/_advert.scss
@@ -1,18 +1,3 @@
-/* ADVERT */
-.main-title {
-    font-family: Roboto;
-    color: #ffffff;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    letter-spacing: 0.06em;
-    width: 696px;
-    text-align: center;
-    margin: 0 auto;
-    padding-top: 200px;
-    padding-bottom: 30px;
-}
-
 .advert {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
@@ -24,15 +9,12 @@
     margin: 0 auto;
     display: block;
     justify-content: center;
-}
-
-.advert__button {
+    &__button {
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.advert__button {
+    }
+    &__button {
     border-radius: 4px;
     padding: 10px auto;
     align-items: center;
@@ -46,41 +28,11 @@
     width: 200px;
     height: 50px;
     margin: 0 auto;
+        &:hover,
+        &:focus {
+        cursor: pointer;
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    }
 }
 
-.advert__button:hover,
-.advert__button:focus {
-    cursor: pointer;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-/* OURS ADVANTAGES */
-.feature {
-    color: #757575;
-}
-
-.feature__icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 120px;
-    margin-bottom: 30px;
-    border-radius: 4px;
-    background-color: #f5f4fa;
-}
-
-.feature__title {
-    font-weight: 700;
-    color: #212121;
-    margin-bottom: 10px;
-}
-
-.list1 {
-    display: flex;
-    justify-content: space-between;
-    margin: 94px auto;
-}
-
-.feature:not(:last-child) {
-    margin-right: 30px;
-}
