--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,58 +1,48 @@
-/* FOOTER */
 .footer {
     background-color: #2f303a;
     color: #ffffff;
-}
 
-.footer__logo {
+    &__logo {
     color: inherit;
     margin-bottom: 20px;
-}
+    }
 
-.footer__container {
+    &__container {
     padding: 60px 0;
     display: flex;
-}
+    }
 
-.footer__contact {
+    &__contact {
     color: rgba(255, 255, 255, 0.6);
-}
-
-.smaller-title {
-    font-family: Roboto;
-    font-weight: 700;
-}
-
-.footer__link:hover,
-.footer__link:focus {
-    color: #2196f3;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer__address {
-    font-style: normal;
-}
-
-.footer__link {
+    }
+    
+    &__link {
     color: #757575;
     text-decoration: none;
     display: block;
     font-style: normal;
     margin: 9px auto;
-}
-
-.social-footer {
+        &:hover,
+        &:focus {
+        color: #2196f3;
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    }
+    &__address {
+    font-style: normal;
+    }
+    &__social {
     margin-left: 70px;
-}
+    }
 
-.social-footer__links {
+    &__social-links {
     width: 206px;
     height: 80px;
     display: flex;
     justify-content: space-between;
-}
+    }
 
-.social-footer__icon {
+    &__social-icon {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -61,57 +51,11 @@
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.1);
     fill: #ffffff;
-}
-
-.social-footer__icon:hover,
-.social-footer__icon:focus {
-    background-color: #2196f3;
-    fill: #ffffff;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.newsletter {
-    margin-left: 78px;
-}
-
-.newsletter__input {
-    background-color: rgba(0, 0, 0, 0);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-    width: 358px;
-    height: 50px;
-    padding-left: 16px;
-    color: rgba(255, 255, 255, 0.6);
-}
-
-.newsletter__input::placeholder {
-    color: rgba(255, 255, 255, 0.6);
-}
-
-.newsletter__button {
-    font-family: Roboto;
-    color: #ffffff;
-    background-color: #2196f3;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.875;
-    text-align: center;
-    width: 200px;
-    height: 50px;
-    margin: 0 auto;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.newsletter__button-icon {
-    fill: #ffffff;
-    margin-left: 24px;
-}
-
-.newsletter__button-inside {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+        &:hover,
+        &:focus {
+        background-color: #2196f3;
+        fill: #ffffff;
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    }
 }
