--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,117 +1,12 @@
-/* TEAM */
-.team__container {
-    margin-top: 94px;
-    padding: 94px 0;
-}
-
-.team__title {
-    margin-bottom: 50px;
-}
-
-.johns__member {
-    color: #757575;
-    font-size: 16px;
-    line-height: 1.19;
-    text-align: center;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
-    width: 270px;
-    height: auto;
-    margin: 0;
-    background-color: #ffffff;
-}
-
-.johns {
-    display: flex;
-    justify-content: space-between;
-}
-
-.johns__figcaption {
-    margin: 30px auto;
-}
-
-.johns__standing {
-    margin: 10px auto;
-}
-
-.johns__picture {
-    margin: 0;
-    padding: 0;
-    display: inline;
-    justify-content: flex-start;
-}
-
-.johns__figure {
-    margin-block-start: 0;
-    margin-block-end: 0;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
-}
-
 .team {
     background-color: #f5f4fa;
-}
 
-.johns__name {
-    color: #212121;
-    font-weight: 500;
-}
+    &__container {
+    margin-top: 94px;
+    padding: 94px 0;
+    }
 
-.social-links {
-    margin: 0px auto 0px auto;
-    width: 206px;
-    height: 44px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.social-links__icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    background-color: #ffffff;
-    fill: #afb1b8;
-}
-
-.social-links__icon:hover,
-.social-links__icon:focus {
-    background-color: #2196f3;
-    fill: #ffffff;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-/* CLIENTS */
-.clients__list {
-    display: flex;
-    justify-content: space-between;
-    margin: 0 15px 94px 15px;
-}
-
-.clients__client {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    align-self: center;
-    width: 170px;
-    height: 92px;
-    border: 1px solid #afb1b8;
-    border-radius: 4px;
-    border-color: #afb1b8;
-    fill: #afb1b8;
-}
-
-.clients__logo {
-    display: flex;
-    align-content: center;
-    width: 106px;
-}
-
-.clients__client:hover {
-    fill: #2196f3;
-    border-color: #2196f3;
-    cursor: pointer;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &__title {
+    margin-bottom: 50px;
+    }
 }
