--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -3,12 +3,12 @@
     font-weight: 700;
     text-decoration: none;
     font-size: 26px;
-    color: #212121;
+    color: $darkLogoColor;
     margin-right: 93px;
     display: flex;
     align-items: center;
     text-decoration: none;
     &__color1 {
-    color: #2196f3;
+    color: $firstLogoColor;
     }
 }
