--- a/sass/components/_main-title.scss
+++ b/sass/components/_main-title.scss
@@ -1,6 +1,6 @@
 .main-title {
     font-family: Roboto;
-    color: #ffffff;
+    color: $darkBackgroundFontColor;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
