--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,7 @@ footer {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
+
 .modal__close-button {
   position: absolute;
   top: 8px;
@@ -100,6 +101,7 @@ footer {
 .newsletter {
   margin-left: 78px;
 }
+
 .newsletter__input {
   background-color: rgba(0, 0, 0, 0);
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -110,15 +112,19 @@ footer {
   padding-left: 16px;
   color: rgba(255, 255, 255, 0.6);
 }
+
 .newsletter__input::-moz-placeholder {
   color: rgba(255, 255, 255, 0.6);
 }
+
 .newsletter__input:-ms-input-placeholder {
   color: rgba(255, 255, 255, 0.6);
 }
+
 .newsletter__input::placeholder {
   color: rgba(255, 255, 255, 0.6);
 }
+
 .newsletter__button {
   font-family: Roboto;
   color: #ffffff;
@@ -134,10 +140,12 @@ footer {
   border-radius: 4px;
   cursor: pointer;
 }
+
 .newsletter__button-icon {
   fill: #ffffff;
   margin-left: 24px;
 }
+
 .newsletter__button-inside {
   display: flex;
   justify-content: center;
@@ -147,11 +155,13 @@ footer {
 .contact {
   display: block;
 }
+
 .contact__link {
   color: #757575;
   text-decoration: none;
   margin: auto 25px;
 }
+
 .contact__icon {
   margin: auto 10px;
 }
@@ -161,6 +171,7 @@ footer {
   list-style: none;
   align-items: center;
 }
+
 .navigation__item {
   margin: auto 23px;
 }
@@ -168,6 +179,7 @@ footer {
 .form {
   padding: 40px;
 }
+
 .form__input-title {
   font-size: 12px;
   letter-spacing: 0.01em;
@@ -175,11 +187,13 @@ footer {
   margin-top: 10px;
   margin-bottom: 4px;
 }
+
 .form__title {
   font-size: 20px;
   line-height: 1.15;
   text-align: center;
 }
+
 .form__button {
   font-family: Roboto;
   color: #ffffff;
@@ -195,6 +209,7 @@ footer {
   border-radius: 4px;
   cursor: pointer;
 }
+
 .form__input {
   width: 100%;
   height: 40px;
@@ -202,6 +217,7 @@ footer {
   border-radius: 4px;
   padding-left: 42px;
 }
+
 .form__textarea {
   width: 100%;
   height: 120px;
@@ -219,14 +235,17 @@ footer {
 .form__textarea::placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
+
 .form__icon {
   position: absolute;
   left: 15px;
   bottom: 14px;
 }
+
 .form__input-box {
   position: relative;
 }
+
 .form__policy-text {
   display: flex;
   align-items: center;
@@ -234,6 +253,7 @@ footer {
   height: 24px;
   margin: 20px auto 30px auto;
 }
+
 .form__policy-text::before {
   display: inline-block;
   content: "";
@@ -243,20 +263,25 @@ footer {
   border-radius: 2px;
   margin-right: 8px;
 }
+
 .form__policy:checked + .form__policy-text::before {
   border: none;
   background-image: url(../images/icon\ check.svg);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .form__submit {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.form__input:focus-within, .form__textarea:focus-within {
+
+.form__input:focus-within,
+.form__textarea:focus-within {
   border-color: #2196f3;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .form__input:focus-within + .form__icon {
   fill: #2196f3;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -280,6 +305,7 @@ footer {
   display: flex;
   justify-content: space-between;
 }
+
 .johns__member {
   color: #757575;
   font-size: 16px;
@@ -291,18 +317,22 @@ footer {
   margin: 0;
   background-color: #ffffff;
 }
+
 .johns__figcaption {
   margin: 30px auto;
 }
+
 .johns__standing {
   margin: 10px auto;
 }
+
 .johns__picture {
   margin: 0;
   padding: 0;
   display: inline;
   justify-content: flex-start;
 }
+
 .johns__figure {
   -webkit-margin-before: 0;
           margin-block-start: 0;
@@ -313,6 +343,7 @@ footer {
   -webkit-margin-end: 0;
           margin-inline-end: 0;
 }
+
 .johns__name {
   color: #212121;
   font-weight: 500;
@@ -325,6 +356,7 @@ footer {
   display: flex;
   justify-content: space-between;
 }
+
 .social-links__icon {
   display: flex;
   justify-content: center;
@@ -353,285 +385,6 @@ footer {
   font-weight: 700;
 }
 
-.header {
-  height: 80px;
-  border-bottom: 1px solid #ececec;
-  font-weight: 500;
-  font-size: 14px;
-  display: flex;
-  list-style: none;
-}
-.header__contact {
-  margin-left: auto;
-}
-.header__container {
-  display: flex;
-  align-items: center;
-}
-.header__navigation, .header__contact {
-  display: flex;
-  justify-content: center;
-}
-.header__link {
-  color: #212121;
-  text-decoration: none;
-  fill: currentColor;
-}
-.header__link:hover, .header__link:focus {
-  color: #2196f3;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.header__link--active {
-  position: relative;
-}
-.header__link--active::after {
-  content: "";
-  display: block;
-  border-top: 4px solid #2196f3;
-  border-radius: 2px;
-  position: absolute;
-  width: 100%;
-  bottom: -32.5px;
-}
-
-.advert {
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background1.jpg);
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  height: 600px;
-  max-width: 1600px;
-  margin: 0 auto;
-  display: block;
-  justify-content: center;
-}
-.advert__button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.advert__button {
-  border-radius: 4px;
-  padding: 10px auto;
-  align-items: center;
-  font-family: Roboto;
-  color: #ffffff;
-  background-color: #2196f3;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.875;
-  text-align: center;
-  width: 200px;
-  height: 50px;
-  margin: 0 auto;
-}
-.advert__button:hover, .advert__button:focus {
-  cursor: pointer;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-/* WHAT WE DO */
-.what-we-do__list {
-  display: flex;
-  align-content: space-between;
-}
-.what-we-do__element {
-  position: relative;
-  padding-right: 15px;
-  padding-left: 15px;
-}
-.what-we-do__label {
-  position: absolute;
-  bottom: 0;
-  left: 15px;
-  color: #ffffff;
-  font-size: 14px;
-  font-weight: 700;
-  background-color: rgba(47, 48, 58, 0.8);
-  width: 370px;
-  height: 70px;
-  margin: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.team {
-  background-color: #f5f4fa;
-}
-.team__container {
-  margin-top: 94px;
-  padding: 94px 0;
-}
-.team__title {
-  margin-bottom: 50px;
-}
-
-.footer {
-  background-color: #2f303a;
-  color: #ffffff;
-}
-.footer__logo {
-  color: inherit;
-  margin-bottom: 20px;
-}
-.footer__container {
-  padding: 60px 0;
-  display: flex;
-}
-.footer__contact {
-  color: rgba(255, 255, 255, 0.6);
-}
-.footer__link {
-  color: #757575;
-  text-decoration: none;
-  display: block;
-  font-style: normal;
-  margin: 9px auto;
-}
-.footer__link:hover, .footer__link:focus {
-  color: #2196f3;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer__address {
-  font-style: normal;
-}
-.footer__social {
-  margin-left: 70px;
-}
-.footer__social-links {
-  width: 206px;
-  height: 80px;
-  display: flex;
-  justify-content: space-between;
-}
-.footer__social-icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.1);
-  fill: #ffffff;
-}
-.footer__social-icon:hover, .footer__social-icon:focus {
-  background-color: #2196f3;
-  fill: #ffffff;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.advantages__list {
-  display: flex;
-  justify-content: space-between;
-  margin: 94px auto;
-}
-
-.feature {
-  color: #757575;
-}
-.feature__icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 120px;
-  margin-bottom: 30px;
-  border-radius: 4px;
-  background-color: #f5f4fa;
-}
-.feature__title {
-  font-weight: 700;
-  color: #212121;
-  margin-bottom: 10px;
-}
-.feature:not(:last-child) {
-  margin-right: 30px;
-}
-
-.clients__list {
-  display: flex;
-  justify-content: space-between;
-  margin: 0 15px 94px 15px;
-}
-.clients__client {
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  align-self: center;
-  width: 170px;
-  height: 92px;
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
-  border-color: #afb1b8;
-  fill: #afb1b8;
-}
-.clients__client:hover {
-  fill: #2196f3;
-  border-color: #2196f3;
-  cursor: pointer;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.clients__logo {
-  display: flex;
-  align-content: center;
-  width: 106px;
-}
-
-/* PORTFOLIO */
-.buttons__button {
-  font-family: "Roboto", "Raleway", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.63;
-  text-align: center;
-  background-color: #f5f4fa;
-  border-radius: 4px;
-  height: 38px;
-  padding: 6px 22px;
-  border: 0;
-}
-
-.buttons__button:hover,
-.buttons__button:focus {
-  background-color: #2196f3;
-  color: #ffffff;
-  cursor: pointer;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio {
-  margin: 94px auto;
-}
-
-.buttons__list {
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
-}
-
-.portfolio__buttons {
-  margin-bottom: 50px;
-}
-
-.buttons__page:not(:last-child) {
-  margin-right: 8px;
-}
-
-.projects__project {
-  color: #757575;
-  font-size: 16px;
-  line-height: 1.88;
-  border: 1px solid #eeeeee;
-  width: 370px;
-  height: 404px;
-}
-
-.projects__project:hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-  cursor: pointer;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .project__layout {
   -webkit-margin-before: 0;
           margin-block-start: 0;
@@ -641,6 +394,9 @@ footer {
           margin-inline-start: 0;
   -webkit-margin-end: 0;
           margin-inline-end: 0;
+}
+.project__layout:hover .project__overlay {
+  transform: translatey(0);
 }
 
 .project__data {
@@ -702,6 +458,300 @@ footer {
   line-height: 1.56;
 }
 
-.project__layout:hover .project__overlay {
-  transform: translatey(0);
+.buttons__button {
+  font-family: "Roboto", "Raleway", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  text-align: center;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  height: 38px;
+  padding: 6px 22px;
+  border: 0;
+}
+.buttons__button:hover, .buttons__button:focus {
+  background-color: #2196f3;
+  color: #ffffff;
+  cursor: pointer;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.buttons__list {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.header {
+  height: 80px;
+  border-bottom: 1px solid #ececec;
+  font-weight: 500;
+  font-size: 14px;
+  display: flex;
+  list-style: none;
+}
+
+.header__contact {
+  margin-left: auto;
+}
+
+.header__container {
+  display: flex;
+  align-items: center;
+}
+
+.header__navigation,
+.header__contact {
+  display: flex;
+  justify-content: center;
+}
+
+.header__link {
+  color: #212121;
+  text-decoration: none;
+  fill: currentColor;
+}
+.header__link:hover, .header__link:focus {
+  color: #2196f3;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header__link--active {
+  position: relative;
+}
+.header__link--active::after {
+  content: "";
+  display: block;
+  border-top: 4px solid #2196f3;
+  border-radius: 2px;
+  position: absolute;
+  width: 100%;
+  bottom: -32.5px;
+}
+
+.advert {
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background1.jpg);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  height: 600px;
+  max-width: 1600px;
+  margin: 0 auto;
+  display: block;
+  justify-content: center;
+}
+
+.advert__button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.advert__button {
+  border-radius: 4px;
+  padding: 10px auto;
+  align-items: center;
+  font-family: Roboto;
+  color: #ffffff;
+  background-color: #2196f3;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  text-align: center;
+  width: 200px;
+  height: 50px;
+  margin: 0 auto;
+}
+.advert__button:hover, .advert__button:focus {
+  cursor: pointer;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.what-we-do__list {
+  display: flex;
+  align-content: space-between;
+}
+
+.what-we-do__element {
+  position: relative;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.what-we-do__label {
+  position: absolute;
+  bottom: 0;
+  left: 15px;
+  color: #ffffff;
+  font-size: 14px;
+  font-weight: 700;
+  background-color: rgba(47, 48, 58, 0.8);
+  width: 370px;
+  height: 70px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.team {
+  background-color: #f5f4fa;
+}
+
+.team__container {
+  margin-top: 94px;
+  padding: 94px 0;
+}
+
+.team__title {
+  margin-bottom: 50px;
+}
+
+.footer {
+  background-color: #2f303a;
+  color: #ffffff;
+}
+
+.footer__logo {
+  color: inherit;
+  margin-bottom: 20px;
+}
+
+.footer__container {
+  padding: 60px 0;
+  display: flex;
+}
+
+.footer__contact {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer__link {
+  color: #757575;
+  text-decoration: none;
+  display: block;
+  font-style: normal;
+  margin: 9px auto;
+}
+.footer__link:hover, .footer__link:focus {
+  color: #2196f3;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer__address {
+  font-style: normal;
+}
+
+.footer__social {
+  margin-left: 70px;
+}
+
+.footer__social-links {
+  width: 206px;
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__social-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  fill: #ffffff;
+}
+.footer__social-icon:hover, .footer__social-icon:focus {
+  background-color: #2196f3;
+  fill: #ffffff;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.advantages__list {
+  display: flex;
+  justify-content: space-between;
+  margin: 94px auto;
+}
+
+.feature {
+  color: #757575;
+}
+.feature:not(:last-child) {
+  margin-right: 30px;
+}
+
+.feature__icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 120px;
+  margin-bottom: 30px;
+  border-radius: 4px;
+  background-color: #f5f4fa;
+}
+
+.feature__title {
+  font-weight: 700;
+  color: #212121;
+  margin-bottom: 10px;
+}
+
+.clients__list {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 15px 94px 15px;
+}
+
+.clients__client {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-self: center;
+  width: 170px;
+  height: 92px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  border-color: #afb1b8;
+  fill: #afb1b8;
+}
+.clients__client:hover {
+  fill: #2196f3;
+  border-color: #2196f3;
+  cursor: pointer;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.clients__logo {
+  display: flex;
+  align-content: center;
+  width: 106px;
+}
+
+.portfolio {
+  margin: 94px auto;
+}
+
+.portfolio__buttons {
+  margin-bottom: 50px;
+}
+
+.buttons__page:not(:last-child) {
+  margin-right: 8px;
+}
+
+.projects__project {
+  color: #757575;
+  font-size: 16px;
+  line-height: 1.88;
+  border: 1px solid #eeeeee;
+  width: 370px;
+  height: 404px;
+}
+
+.projects__project:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  cursor: pointer;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }/*# sourceMappingURL=main.css.map */
