--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -4,7 +4,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: $backdropBackgroundColor;
     transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
     &--hidden {
         opacity: 0;
