--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,91 +1,91 @@
 .form {
-    padding: 40px;
-    &__input-title {
-    font-size: 12px;
-    letter-spacing: 0.01em;
-    color: #757575;
-    margin-top: 10px;
-    margin-bottom: 4px;
-    }
-    &__title {
-    font-size: 20px;
-    line-height: 1.15;
-    text-align: center;
-    }
-    &__button {
-    font-family: Roboto;
-    color: #ffffff;
-    background-color: #2196f3;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.875;
-    text-align: center;
-    width: 200px;
-    height: 50px;
-    margin: 0 auto;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    cursor: pointer;
-    }
-    &__input {
-    width: 100%;
-    height: 40px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    padding-left: 42px;
-    }
-    &__textarea {
-    width: 100%;
-    height: 120px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    resize: none;
-    padding: 12px 16px;
-        &::placeholder {
-        color: rgba(117, 117, 117, 0.5);
-        }
-    }
-    &__icon {
-    position: absolute;
-    left: 15px;
-    bottom: 14px;
-    }
-    &__input-box {
-    position: relative;
-    }
-    &__policy-text {
-    display: flex;
-    align-items: center;
-    color: #757575;
-    height: 24px;
-    margin: 20px auto 30px auto;
-    }
-    &__policy-text::before {
-    display: inline-block;
-    content: "";
-    width: 16px;
-    height: 15px;
-    border: 2px solid #000;
-    border-radius: 2px;
-    margin-right: 8px;
-    }
-    &__policy:checked+&__policy-text::before {
-    border: none;
-    background-image: url(../images/icon\ check.svg);
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-    &__submit {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    }
-    &__input:focus-within,
-    &__textarea:focus-within {
-    border-color: #2196f3;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-    &__input:focus-within+&__icon {
-    fill: #2196f3;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
+  padding: 40px;
+}
+.form__input-title {
+  font-size: 12px;
+  letter-spacing: 0.01em;
+  color: $secondaryColor;
+  margin-top: 10px;
+  margin-bottom: 4px;
+}
+.form__title {
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+}
+.form__button {
+  font-family: Roboto;
+  color: $darkBackgroundFontColor;
+  background-color: $backgroundButtonColor;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  text-align: center;
+  width: 200px;
+  height: 50px;
+  margin: 0 auto;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  cursor: pointer;
+}
+.form__input {
+  width: 100%;
+  height: 40px;
+  border: $formBorderColor;
+  border-radius: 4px;
+  padding-left: 42px;
+}
+.form__textarea {
+  width: 100%;
+  height: 120px;
+  border: $formBorderColor;
+  border-radius: 4px;
+  resize: none;
+  padding: 12px 16px;
+  &::placeholder {
+    color: rgba(117, 117, 117, 0.5);
+  }
+}
+.form__icon {
+  position: absolute;
+  left: 15px;
+  bottom: 14px;
+}
+.form__input-box {
+  position: relative;
+}
+.form__policy-text {
+  display: flex;
+  align-items: center;
+  color: $secondaryColor;
+  height: 24px;
+  margin: 20px auto 30px auto;
+}
+.form__policy-text::before {
+  display: inline-block;
+  content: "";
+  width: 16px;
+  height: 15px;
+  border: 2px solid #000;
+  border-radius: 2px;
+  margin-right: 8px;
+}
+.form__policy:checked + .form__policy-text::before {
+  border: none;
+  background-image: url(../images/icon\ check.svg);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form__submit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.form__input:focus-within,
+.form__textarea:focus-within {
+  border-color: $formFocusColor;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form__input:focus-within + .form__icon {
+  fill: $formFocusColor;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
