--- a/sass/components/_johns.scss
+++ b/sass/components/_johns.scss
@@ -1,44 +1,43 @@
 .johns {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
+}
+.johns__member {
+  color: #757575;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  width: 270px;
+  height: auto;
+  margin: 0;
+  background-color: $brightBackgroundColor;
+}
 
-    &__member {
-    color: #757575;
-    font-size: 16px;
-    line-height: 1.19;
-    text-align: center;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
-    width: 270px;
-    height: auto;
-    margin: 0;
-    background-color: #ffffff;
-    }
+.johns__figcaption {
+  margin: 30px auto;
+}
 
-    &__figcaption {
-    margin: 30px auto;
-    }
+.johns__standing {
+  margin: 10px auto;
+}
 
-    &__standing {
-    margin: 10px auto;
-    }
+.johns__picture {
+  margin: 0;
+  padding: 0;
+  display: inline;
+  justify-content: flex-start;
+}
 
-    &__picture {
-    margin: 0;
-    padding: 0;
-    display: inline;
-    justify-content: flex-start;
-    }
+.johns__figure {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+}
 
-    &__figure {
-    margin-block-start: 0;
-    margin-block-end: 0;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
-    }
-
-    &__name {
-    color: #212121;
-    font-weight: 500;
-    }
+.johns__name {
+  color: $primaryColor;
+  font-weight: 500;
 }
