--- a/sass/components/_social-links.scss
+++ b/sass/components/_social-links.scss
@@ -1,24 +1,23 @@
 .social-links {
-    margin: 0px auto 0px auto;
-    width: 206px;
-    height: 44px;
-    display: flex;
-    justify-content: space-between;
-
-    &__icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    background-color: #ffffff;
-    fill: #afb1b8;
-    &:hover,
-    &:focus {
-        background-color: #2196f3;
-        fill: #ffffff;
-        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
+  margin: 0px auto 0px auto;
+  width: 206px;
+  height: 44px;
+  display: flex;
+  justify-content: space-between;
 }
+.social-links__icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: $brightBackgroundColor;
+  fill: $socialLinksNormalColor;
+  &:hover,
+  &:focus {
+    background-color: $socialLinksFocusColor;
+    fill: $darkBackgroundFontColor;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
