--- a/sass/layout/_advert.scss
+++ b/sass/layout/_advert.scss
@@ -1,38 +1,39 @@
 .advert {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4),
-            rgba(47, 48, 58, 0.4)),
-        url(../images/background1.jpg);
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    height: 600px;
-    max-width: 1600px;
-    margin: 0 auto;
-    display: block;
-    justify-content: center;
-    &__button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    }
-    &__button {
-    border-radius: 4px;
-    padding: 10px auto;
-    align-items: center;
-    font-family: Roboto;
-    color: #ffffff;
-    background-color: #2196f3;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.875;
-    text-align: center;
-    width: 200px;
-    height: 50px;
-    margin: 0 auto;
-        &:hover,
-        &:focus {
-        cursor: pointer;
-        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        }
-    }
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/background1.jpg);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  height: 600px;
+  max-width: 1600px;
+  margin: 0 auto;
+  display: block;
+  justify-content: center;
 }
-
+.advert__button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.advert__button {
+  border-radius: 4px;
+  padding: 10px auto;
+  align-items: center;
+  font-family: Roboto;
+  color: $darkBackgroundFontColor;
+  background-color: #2196f3;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  text-align: center;
+  width: 200px;
+  height: 50px;
+  margin: 0 auto;
+  &:hover,
+  &:focus {
+    cursor: pointer;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
