--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,61 +1,60 @@
 .footer {
-    background-color: #2f303a;
-    color: #ffffff;
+  background-color: $footerBackgroundColor;
+  color: $footerMainFontColor;
+}
+.footer__logo {
+  color: inherit;
+  margin-bottom: 20px;
+}
 
-    &__logo {
-    color: inherit;
-    margin-bottom: 20px;
-    }
+.footer__container {
+  padding: 60px 0;
+  display: flex;
+}
 
-    &__container {
-    padding: 60px 0;
-    display: flex;
-    }
+.footer__contact {
+  color: rgba(255, 255, 255, 0.6);
+}
 
-    &__contact {
-    color: rgba(255, 255, 255, 0.6);
-    }
-    
-    &__link {
-    color: #757575;
-    text-decoration: none;
-    display: block;
-    font-style: normal;
-    margin: 9px auto;
-        &:hover,
-        &:focus {
-        color: #2196f3;
-        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        }
-    }
-    &__address {
-    font-style: normal;
-    }
-    &__social {
-    margin-left: 70px;
-    }
+.footer__link {
+  color: $footerSecondaryColor;
+  text-decoration: none;
+  display: block;
+  font-style: normal;
+  margin: 9px auto;
+  &:hover,
+  &:focus {
+    color: $footerHoverColor;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+.footer__address {
+  font-style: normal;
+}
+.footer__social {
+  margin-left: 70px;
+}
 
-    &__social-links {
-    width: 206px;
-    height: 80px;
-    display: flex;
-    justify-content: space-between;
-    }
+.footer__social-links {
+  width: 206px;
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+}
 
-    &__social-icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    background-color: rgba(255, 255, 255, 0.1);
-    fill: #ffffff;
-        &:hover,
-        &:focus {
-        background-color: #2196f3;
-        fill: #ffffff;
-        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        }
-    }
+.footer__social-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  fill: $footerSocialLinksColor;
+  &:hover,
+  &:focus {
+    background-color: $footerHoverColor;
+    fill: $footerSocialLinksColor;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
