--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,46 +1,45 @@
 .header {
-    height: 80px;
-    border-bottom: 1px solid #ececec;
-    font-weight: 500;
-    font-size: 14px;
-    display: flex;
-    list-style: none;
+  height: 80px;
+  border-bottom: 1px solid #ececec;
+  font-weight: 500;
+  font-size: 14px;
+  display: flex;
+  list-style: none;
+}
+.header__contact {
+  margin-left: auto;
+}
 
-    &__contact {
-    margin-left: auto;
-    }
+.header__container {
+  display: flex;
+  align-items: center;
+}
 
-    &__container {
-    display: flex;
-    align-items: center;
-    }
+.header__navigation,
+.header__contact {
+  display: flex;
+  justify-content: center;
+}
 
-    &__navigation,
-    &__contact {
-    display: flex;
-    justify-content: center;
-    }
-
-    &__link {
-    color: #212121;
-    text-decoration: none;
-    fill: currentColor;
-        &:hover,
-        &:focus {
-        color: #2196f3;
-        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        }
-        &--active {
-        position: relative;
-        }
-        &--active::after {
-            content: "";
-            display: block;
-            border-top: 4px solid #2196f3;
-            border-radius: 2px;
-            position: absolute;
-            width: 100%;
-            bottom: -32.5px;
-            }
-    }
+.header__link {
+  color: #212121;
+  text-decoration: none;
+  fill: currentColor;
+  &:hover,
+  &:focus {
+    color: $headerHoverColor;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  &--active {
+    position: relative;
+  }
+  &--active::after {
+    content: "";
+    display: block;
+    border-top: 4px solid $headerUnderlineColor;
+    border-radius: 2px;
+    position: absolute;
+    width: 100%;
+    bottom: -32.5px;
+  }
 }
