--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,128 +1,27 @@
-/* PORTFOLIO */
-
-.buttons__button {
-    font-family: "Roboto", "Raleway", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.63;
-    text-align: center;
-    background-color: #f5f4fa;
-    border-radius: 4px;
-    height: 38px;
-    padding: 6px 22px;
-    border: 0;
-}
-
-.buttons__button:hover,
-.buttons__button:focus {
-    background-color: #2196f3;
-    color: #ffffff;
-    cursor: pointer;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .portfolio {
-    margin: 94px auto;
-}
-
-.buttons__list {
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
+  margin: 94px auto;
 }
 
 .portfolio__buttons {
-    margin-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 .buttons__page:not(:last-child) {
-    margin-right: 8px;
+  margin-right: 8px;
 }
 
 .projects__project {
-    color: #757575;
-    font-size: 16px;
-    line-height: 1.88;
-    border: 1px solid #eeeeee;
-    width: 370px;
-    height: 404px;
+  color: $secondaryColor;
+  font-size: 16px;
+  line-height: 1.88;
+  border: 1px solid #eeeeee;
+  width: 370px;
+  height: 404px;
 }
 
 .projects__project:hover {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-        1px 4px 6px rgba(0, 0, 0, 0.16);
-    cursor: pointer;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.project__layout {
-    margin-block-start: 0;
-    margin-block-end: 0;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
-}
-
-.project__data {
-    margin: 20px auto;
-}
-
-.project__title,
-.project__description {
-    margin: 0 auto;
-}
-
-.project__title {
-    font-weight: 700;
-    color: #212121;
-    font-size: 18px;
-    line-height: 2;
-    width: 322px;
-    height: 36px;
-}
-
-.project__description {
-    width: 322px;
-    height: 30px;
-}
-
-.projects__list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.projects__project {
-    margin-bottom: 30px;
-}
-
-.project__image {
-    position: relative;
-    overflow: hidden;
-}
-
-.project__overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 370px;
-    height: 294px;
-    transform: translatey(100%);
-    transition: transform 250ms ease;
-    background-color: rgba(33, 150, 243, 0.9);
-    padding: 49px 45px 49px 24px;
-}
-
-.project__overlay-description {
-    width: auto;
-    height: auto;
-    color: #ffffff;
-    font-size: 18px;
-    margin: 0;
-    line-height: 1.56;
-}
-
-.project__layout:hover .project__overlay {
-    transform: translatey(0);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+  cursor: pointer;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
