--- a/sass/layout/_whatwedo.scss
+++ b/sass/layout/_whatwedo.scss
@@ -1,19 +1,17 @@
-/* WHAT WE DO */
-.what-we-do {
-  &__list {
+.what-we-do__list {
   display: flex;
   align-content: space-between;
-  }
-  &__element {
+}
+.what-we-do__element {
   position: relative;
   padding-right: 15px;
   padding-left: 15px;
-  }
-  &__label {
+}
+.what-we-do__label {
   position: absolute;
   bottom: 0;
   left: 15px;
-  color: #ffffff;
+  color: $darkBackgroundFontColor;
   font-size: 14px;
   font-weight: 700;
   background-color: rgba(47, 48, 58, 0.8);
@@ -23,5 +21,4 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  }
 }
