--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "./utils/visually-hidden";
+@import "./utils/vars";
 
 @import "./base/common";
 @import "./base/container";
@@ -15,6 +16,8 @@
 @import "./components/social-links";
 @import "./components/title";
 @import "./components/smaller-title";
+@import "./components/project";
+@import "./components/buttons";
 
 @import "./layout/header";
 @import "./layout/advert";
