--- a/css/main.css
+++ b/css/main.css
@@ -158,8 +158,14 @@ footer {
 
 .contact__link {
   color: #757575;
+  fill: #757575;
   text-decoration: none;
   margin: auto 25px;
+}
+.contact__link:hover, .contact__link:focus {
+  color: #2196f3;
+  fill: #2196f3;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact__icon {
@@ -174,6 +180,32 @@ footer {
 
 .navigation__item {
   margin: auto 23px;
+}
+
+.navigation__link {
+  color: #212121;
+  text-decoration: none;
+  fill: currentColor;
+}
+
+.navigation__link:hover,
+.navigation__link:focus {
+  color: #2196f3;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.navigation__link--active {
+  position: relative;
+}
+
+.navigation__link--active::after {
+  content: "";
+  display: block;
+  border-top: 4px solid #2196f3;
+  border-radius: 2px;
+  position: absolute;
+  width: 100%;
+  bottom: -32.5px;
 }
 
 .form {
@@ -508,29 +540,7 @@ footer {
   justify-content: center;
 }
 
-.header__link {
-  color: #212121;
-  text-decoration: none;
-  fill: currentColor;
-}
-.header__link:hover, .header__link:focus {
-  color: #2196f3;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.header__link--active {
-  position: relative;
-}
-.header__link--active::after {
-  content: "";
-  display: block;
-  border-top: 4px solid #2196f3;
-  border-radius: 2px;
-  position: absolute;
-  width: 100%;
-  bottom: -32.5px;
-}
-
-.advert {
+.hero {
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background1.jpg);
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -541,13 +551,13 @@ footer {
   justify-content: center;
 }
 
-.advert__button {
+.hero__button {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.advert__button {
+.hero__button {
   border-radius: 4px;
   padding: 10px auto;
   align-items: center;
@@ -562,7 +572,7 @@ footer {
   height: 50px;
   margin: 0 auto;
 }
-.advert__button:hover, .advert__button:focus {
+.hero__button:hover, .hero__button:focus {
   cursor: pointer;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
