--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -6,3 +6,25 @@
 .navigation__item {
   margin: auto 23px;
 }
+.navigation__link {
+  color: #212121;
+  text-decoration: none;
+  fill: currentColor;
+}
+.navigation__link:hover,
+.navigation__link:focus {
+  color: $headerHoverColor;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.navigation__link--active {
+  position: relative;
+}
+.navigation__link--active::after {
+  content: "";
+  display: block;
+  border-top: 4px solid $headerUnderlineColor;
+  border-radius: 2px;
+  position: absolute;
+  width: 100%;
+  bottom: -32.5px;
+}
