--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,26 @@ footer {
   margin: 0px auto;
 }
 
+.section__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+}
+.section__title--main-title {
+  font-family: Roboto;
+  color: #ffffff;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  width: 696px;
+  text-align: center;
+  margin: 0 auto;
+  padding-top: 200px;
+  padding-bottom: 30px;
+}
+
 .modal {
   position: absolute;
   top: 50%;
@@ -319,20 +339,6 @@ footer {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.main-title {
-  font-family: Roboto;
-  color: #ffffff;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
-  width: 696px;
-  text-align: center;
-  margin: 0 auto;
-  padding-top: 200px;
-  padding-bottom: 30px;
-}
-
 .johns {
   display: flex;
   justify-content: space-between;
@@ -403,13 +409,6 @@ footer {
   background-color: #2196f3;
   fill: #ffffff;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
 }
 
 .smaller-title {
