--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -1,4 +1,9 @@
-.main-title {
+.section__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  &--main-title {
     font-family: Roboto;
     color: $darkBackgroundFontColor;
     font-weight: 900;
@@ -10,4 +15,5 @@
     margin: 0 auto;
     padding-top: 200px;
     padding-bottom: 30px;
+  }
 }
